Version 2.0.17 of kuali-maven.  update commons lang package to lang3
git-svn-id: https://svn.kuali.org/repos/foundation/trunk@12947 eb505253-de9c-4f3b-bf87-3aad84f29c0f